Fix nullptr bugs